--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_svg: ^2.0.10+1
   flutter_typeahead: ^5.2.0
+  fuzzywuzzy: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +45,7 @@ flutter:
 
   assets:
     - assets/tables.json
+    - assets/amastuola.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -69,3 +72,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: Biancha
+      fonts:
+        - asset: fonts/Biancha-X3VOa.otf
